tests/snapshots/examples_fixtures/aoc__2025__aoc_day11_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day11_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2025/aoc_day11_part1.flx:66:13
   |
66 |     [|name, outs|]
   |             ^^^^
   |             ---- this expression has type `Array<String>`

   |             ---- this type mismatch is reported here

Note:
  expected type: String
  found type: Array<String>
  the conflicting types meet at this expression

Help:
  These two types are not compatible.


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day11_part1.flx:70:19
   |
70 |     let entries = [parse_entry(trim(line)) | line <- lines, trim(line) != "", find_char_from(trim(line), ":", 0) >= 0]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day11_part1.flx:71:5
   |
71 |     fold(entries, {}, /(g, e) -> put(g, str_at(e, 0), arr_at(e, 1)))
   |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `dfs_count`.

  examples/aoc/2025/aoc_day11_part1.flx:79:13
   |
79 |     let r = dfs_count(nxt, graph, memo)
   |             ^^^^^^^^^

Hint:
  Define it first: let dfs_count = ...;

Found 4 errors.
== stdout ==
<not executed>
